Timer function has been fixed, i added clear interval to stop timer from overlapping and speeding up

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ span{
     display: inline;
 }
 
-@media(max-width:800px){
+@media(max-width:400px){
 #TimerFunctions{
     width: 100%;
     flex-direction: row;
